samples/_failures_safe/1761645739_3abcfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_012db946.c: In function ‘main’:
./samples/SAFE/__tmp_012db946.c:141:25: error: expected ‘)’ at end of input
  141 |     if (strlen(filename)
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_012db946.c:141:5: error: expected declaration or statement at end of input
  141 |     if (strlen(filename)
      |     ^~
